--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -707,7 +707,7 @@
                             <div class="content">
                               <h2>{{ palace.name }}</h2>
                               <p>{{ palace.short_description }}</p>
-                              <a href="catagory.html" class="see-btn">See the Deals</a>
+                              <a href="{% url 'home' %}" class="see-btn">See the Deals</a>
                             </div>
                           </div>
                           <div class="tour-content">
