--- a/core/templates/terms.html
+++ b/core/templates/terms.html
@@ -57,7 +57,7 @@
 
       <!-- Back to Home Button -->
       <div class="mt-10">
-        <a href="/" class="inline-flex items-center px-6 py-3 bg-[#c19a5b] hover:bg-[#b38b4a] text-[#1a120b] font-semibold rounded-sm shadow-lg transition transform hover:scale-105">
+        <a href="{% url 'home' %}" class="inline-flex items-center px-6 py-3 bg-[#c19a5b] hover:bg-[#b38b4a] text-[#1a120b] font-semibold rounded-sm shadow-lg transition transform hover:scale-105">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
           </svg>
